[11/11/2019] - 9:34pm - fixed CSS issues on mobile and removed ul padding for all orientations

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,11 +3,3 @@
     display: flex;
     flex-direction: column;
 }
-
-@media screen and (orientation: portrait) {
-    .mobile-container {
-        display: flex;
-        flex-flow: row;
-        width: 100%;
-    }
-}
