--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -35,6 +35,12 @@
         padding: 0 5vw 0 5vw;
     }
 
+    .footer-content img {
+        height: 20vw;
+        width: 20vh;
+        padding: 0 0.2em 0 0.2em;
+    }
+
     .footer-content img:hover {
         transition: none;
         transform-origin: none;
@@ -65,3 +71,4 @@
         padding: 0 2vw 0 2vw;
     }
  }
+ 
