--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -30,6 +30,10 @@
     word-wrap: break-word;
 }
 
+.home-menu-items ul {
+    padding: 0;
+}
+
 @media screen and (orientation: portrait) {
     .Home {
         max-width: 80vw;
