--- a/src/components/Home/components/Education/Education.scss
+++ b/src/components/Home/components/Education/Education.scss
@@ -10,9 +10,3 @@
 .education-items li {
     margin: 0.6em;
 }
-
-@media screen and (orientation: portrait) {
-    .education-items ul {
-        width: 70%;
-    }
-}
