--- a/src/components/Home/components/Projects/Projects.scss
+++ b/src/components/Home/components/Projects/Projects.scss
@@ -1,15 +1,9 @@
 .projects-items ul {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
     list-style-type: none;
 }
 
 .projects-items li {
     margin: 0.6em;
-}
-
-@media screen and (orientation: portrait) {
-    .projects-items ul {
-        text-align: left;
-        width: auto;
-    }
 }
