--- a/src/index.scss
+++ b/src/index.scss
@@ -11,12 +11,12 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb(42, 119, 163);
+  background: rgb(30, 104, 105);
   background: repeating-linear-gradient(
-    rgba(34,193,195,1),
-    rgba(253,187,45,1),
-    rgba(253,187,45,1),
-    rgba(34,193,195,1)
+    rgba(6, 65, 66, 1),
+    rgba(120, 214, 216, 1),
+    rgba(120, 214, 216, 1),
+    rgba(6, 65, 66, 1)
   );
 }
 
